fix(date-picker): usar position: fixed com getBoundingClientRect para escapar do overflow do Storybook

--- a/projects/ds-components/date-picker/src/date-picker.component.scss
+++ b/projects/ds-components/date-picker/src/date-picker.component.scss
@@ -84,9 +84,7 @@
 // ---------------------------------------------------------------------------
 
 .date-picker__calendar {
-  position: absolute;
-  top: calc(100% + 4px);
-  left: 0;
+  position: fixed;
   z-index: 9999;
   background: var(--ds-bg-main, #FCFCFC);
   border: 1px solid var(--ds-border, #CCCCCC);
